[package]
name = "longfellow-jolt"
version = "0.1.0"
edition = "2021"

[workspace]
members = ["guest"]

[profile.release]
debug = 1
codegen-units = 1
lto = "thin"

[dependencies]
jolt-sdk = { git = "https://github.com/a16z/jolt", branch = "main", features = ["host", "zk"] }
guest = { path = "./guest" }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
sha2 = "0.10"
p256 = { version = "0.13", features = ["ecdsa"] }
ecdsa = { version = "0.16", features = ["signing"] }
hex = "0.4"
tikv-jemallocator = "0.6"
libc = "0.2"
jolt-inlines-bigint = { git = "https://github.com/a16z/jolt", branch = "main", features = ["host"] }
jolt-inlines-p256 = { git = "https://github.com/a16z/jolt", branch = "main", features = ["host"] }
jolt-core = { git = "https://github.com/a16z/jolt", branch = "main", default-features = false, features = ["allocative"] }

[patch.crates-io]
ark-ff = { git = "https://github.com/a16z/arkworks-algebra", branch = "dev/twist-shout" }
ark-ec = { git = "https://github.com/a16z/arkworks-algebra", branch = "dev/twist-shout" }
jolt-optimizations = { git = "https://github.com/a16z/arkworks-algebra", branch = "dev/twist-shout" }
ark-serialize = { git = "https://github.com/a16z/arkworks-algebra", branch = "dev/twist-shout" }
ark-bn254 = { git = "https://github.com/a16z/arkworks-algebra", branch = "dev/twist-shout" }
allocative = { git = "https://github.com/facebookexperimental/allocative", rev = "85b773d85d526d068ce94724ff7a7b81203fc95e" }
