[package]
name = "jolt-inlines-p256"
version = "0.1.0"
edition = "2021"
description = "P-256 (secp256r1) inline implementations for Jolt VM"
license = "MIT"
homepage = "https://github.com/a16z/jolt/README.md"
repository = "https://github.com/a16z/jolt"

[features]
default = []
host = ["dep:ctor", "dep:tracer", "dep:tracing", "dep:ark-ff", "dep:ark-secp256r1"]

[dependencies]
ctor = { version = "0.2", optional = true }
tracer = { git = "https://github.com/a16z/jolt", optional = true, features = ["std"] }
tracing = { version = "0.1", optional = true }
serde = { version = "1", features = ["derive"] }
ark-ff = { version = "0.5.0", default-features = false, optional = true }
ark-secp256r1 = { version = "0.5.0", default-features = false, optional = true }
num-bigint = "0.4"
num-integer = "0.1"

[dev-dependencies]
tracer = { git = "https://github.com/a16z/jolt", features = ["std", "test-utils"] }
